dvdisaster (0.79.5-7) UNRELEASED; urgency=medium

  * Add debian/gbp.conf to conform with DEP14 conventions.
  * Build with Debhelper compat level 12.
  * Set "Rules-Requires-Root: no".

 -- Carlos Maddela <e7appew@gmail.com>  Thu, 31 Jan 2019 03:58:19 +1100

dvdisaster (0.79.5-6) unstable; urgency=medium

  [ TANIGUCHI Takaki ]
  * change Vcs-* path

  [ Carlos Maddela ]
  * Build with DH compat level 11.
  * Indicate compliance with Debian Policy 4.1.4.
  * Add machine-readable upstream metadata.
  * Update debian/copyright.
  * Update location of PDF manual registered with doc-base (required
    as a result of DH compat level change).

 -- Carlos Maddela <e7appew@gmail.com>  Sat, 23 Jun 2018 05:01:27 +1000

dvdisaster (0.79.5-5) unstable; urgency=medium

  * Update Vcs-* to salsa.debian.org
  * Bump Standards-Version to 4.1.3

 -- TANIGUCHI Takaki <takaki@debian.org>  Sat, 27 Jan 2018 23:34:08 +0900

dvdisaster (0.79.5-4) unstable; urgency=medium

  * Use complete Debian revision number as build number, instead of
    just the numeric part.
  * Re-implement scripts/time-stamper.bash without direct calls to
    dpkg-parsechangelog.
  * Call ./configure script directly, instead of relying on debhelper,
    to resolve incompatibilities with Bash-based script.
  * Use alternative way of installing icons to remove dependency on
    dh-exec.
  * Drop redundant dependency on dpkg-dev.
  * Reproducibly generate PDF documentation from TeX sources.
  * Remove trailing white space from debian/changelog.
  * Remove unnecessary Testsuite header from debian/control.
  * Indicate compliance with Debian Policy 4.1.2.
  * Suppress debian-watch-uses-insecure-uri Lintian warning.
  * Honour LDFLAGS set by dpkg-buildflags in building all binaries.

 -- Carlos Maddela <e7appew@gmail.com>  Thu, 21 Dec 2017 03:14:14 +1100

dvdisaster (0.79.5-3) unstable; urgency=medium

  * Team upload.
  * Fix another build failure on kFreeBSD.
  * Bump Standards Version to 4.0.1.